{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 274,
  "lineage": "895c10ec-3913-78be-43db-564e869de2e8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bd01824d64912730",
            "arn": "arn:aws:ec2:us-east-1:654654353835:instance/i-02661e0decdd026fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02661e0decdd026fa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tic_tac_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05e6832f35d69c764",
            "private_dns": "ip-10-0-1-139.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.139",
            "public_dns": "ec2-54-162-35-33.compute-1.amazonaws.com",
            "public_ip": "54.162.35.33",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d6342253bceed066",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c1b155de3aa2555e",
            "tags": {
              "Name": "Tic-Tac-Toe"
            },
            "tags_all": {
              "Name": "Tic-Tac-Toe"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04873ab9f9e6d42bd"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_subnet.custom_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_ami.amazon_linux_2",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "custom_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:internet-gateway/igw-04f7eec0fbedd41f3",
            "id": "igw-04f7eec0fbedd41f3",
            "owner_id": "654654353835",
            "tags": {
              "Name": "custom_igw"
            },
            "tags_all": {
              "Name": "custom_igw"
            },
            "vpc_id": "vpc-039f33d8610716914"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654353835:loadbalancer/app/frontend-load-balancer/cce3f1eaff064fbc",
            "arn_suffix": "app/frontend-load-balancer/cce3f1eaff064fbc",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-load-balancer-282371942.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654353835:loadbalancer/app/frontend-load-balancer/cce3f1eaff064fbc",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07abcbac1852352c3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ba290e1e9b3244d8"
              },
              {
                "subnet_id": "subnet-0c1b155de3aa2555e"
              }
            ],
            "subnets": [
              "subnet-0ba290e1e9b3244d8",
              "subnet-0c1b155de3aa2555e"
            ],
            "vpc_id": "vpc-039f33d8610716914",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_subnet.custom_subnet",
            "aws_subnet.custom_subnet_2",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654353835:listener/app/frontend-load-balancer/cce3f1eaff064fbc/2170d6d7158d9695",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654353835:targetgroup/frontend-target-group/d09c2ec55662254c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654353835:listener/app/frontend-load-balancer/cce3f1eaff064fbc/2170d6d7158d9695",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654353835:loadbalancer/app/frontend-load-balancer/cce3f1eaff064fbc",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.frontend_lb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.alb_security_group",
            "aws_subnet.custom_subnet",
            "aws_subnet.custom_subnet_2",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654353835:targetgroup/frontend-target-group/d09c2ec55662254c",
            "arn_suffix": "targetgroup/frontend-target-group/d09c2ec55662254c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654353835:targetgroup/frontend-target-group/d09c2ec55662254c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-target-group",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-039f33d8610716914"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "custom_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:route-table/rtb-0a757dfe977e17b49",
            "id": "rtb-0a757dfe977e17b49",
            "owner_id": "654654353835",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f7eec0fbedd41f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "custom_route_table"
            },
            "tags_all": {
              "Name": "custom_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f33d8610716914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.custom_igw",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8e11fe00ca17f69",
            "route_table_id": "rtb-0a757dfe977e17b49",
            "subnet_id": "subnet-0c1b155de3aa2555e"
          },
          "dependencies": [
            "aws_internet_gateway.custom_igw",
            "aws_route_table.custom_route_table",
            "aws_subnet.custom_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:security-group/sg-07abcbac1852352c3",
            "description": "Security group for ALB allowing HTTP access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07abcbac1852352c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security-group",
            "name_prefix": "",
            "owner_id": "654654353835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ALB SG"
            },
            "tags_all": {
              "Name": "ALB SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f33d8610716914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:security-group/sg-04873ab9f9e6d42bd",
            "description": "allow access on ports 80, 22, 3000, and 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04873ab9f9e6d42bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "backend access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "654654353835",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "docker server sg"
            },
            "tags_all": {
              "Name": "docker server sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-039f33d8610716914"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3000,
            "id": "sgrule-4029357582",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-04873ab9f9e6d42bd",
            "security_group_rule_id": "sgr-04888ed251706603a",
            "self": false,
            "source_security_group_id": "sg-07abcbac1852352c3",
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb_security_group",
            "aws_security_group.ec2_security_group",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:subnet/subnet-0c1b155de3aa2555e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c1b155de3aa2555e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654353835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom_subnet_1"
            },
            "tags_all": {
              "Name": "custom_subnet_1"
            },
            "vpc_id": "vpc-039f33d8610716914"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "custom_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:subnet/subnet-0ba290e1e9b3244d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba290e1e9b3244d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "654654353835",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "custom_subnet_2"
            },
            "tags_all": {
              "Name": "custom_subnet_2"
            },
            "vpc_id": "vpc-039f33d8610716914"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654353835:vpc/vpc-039f33d8610716914",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c31c0e1bd4332e89",
            "default_route_table_id": "rtb-0523a23106dbc7751",
            "default_security_group_id": "sg-00e3fcd59c794d8d6",
            "dhcp_options_id": "dopt-0d82ee7c41f957176",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-039f33d8610716914",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0523a23106dbc7751",
            "owner_id": "654654353835",
            "tags": {
              "Name": "custom_vpc"
            },
            "tags_all": {
              "Name": "custom_vpc"
            }
          }
        }
      ]
    }
  ]
}